[package]
name = "yogurt-py"
version = "0.1.0"
authors = ["Johannes Jeising <Johannes.Jeising@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "yogurt_py"
crate-type = ["cdylib"]

[dependencies]
yogurt-yaml = "^0.2.0"

[dependencies.pyo3]
version = "0.8.4"
features = ["extension-module"]

[build-system]
requires = ["maturin"]
build-backend = "maturin"
